--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,13 @@
 This file contains the major changes between
 libsolv versions:
 
+Version 0.7.7
+- selected bug fixes:
+  * fix updating of too many packages in focusbest mode
+  * fix handling of disabled installed packages in distupgrade
+- new features
+  * new POOL_FLAG_WHATPROVIDESWITHDISABLED pool flag
+
 Version 0.7.6
 - selected bug fixes:
   * fix repository priority handling for multiversion packages
