Add changes, bump version to 0.7.10

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@
 This file contains the major changes between
 libsolv versions:
 
+Version 0.7.10
+- new features:
+  * new rpm_stat_database() function
+  * new rpm_hash_database_state() function
+
 Version 0.7.9
 - new features:
   * support conda constrains dependencies
