Update checksum types in bindings documentation

--- a/doc/gen/libsolv-bindings.3
+++ b/doc/gen/libsolv-bindings.3
@@ -5610,7 +5610,10 @@ Create a checksum object\&. Currently the following types are supported:
 .nf
 \fBREPOKEY_TYPE_MD5\fR
 \fBREPOKEY_TYPE_SHA1\fR
+\fBREPOKEY_TYPE_SHA224\fR
 \fBREPOKEY_TYPE_SHA256\fR
+\fBREPOKEY_TYPE_SHA384\fR
+\fBREPOKEY_TYPE_SHA512\fR
 .fi
 .if n \{\
 .RE
